# pysub-parser

./: .coverage  .gitignore  .travis.yml  LICENSE  MANIFEST  README.md  coverage.xml  pyproject.toml  requirements.txt  setup.py  sonar-project.properties  test.py  test.sh
.github/workflows/: main.yml  master.yml  publish.yml
pysubparser/: __init__.py  parser.py  util.py  writer.py
pysubparser/classes/: classes.py  exceptions.py  subtitle.py
pysubparser/cleaners/: ascii.py  brackets.py  formatting.py  lower_case.py  upper_case.py  wrap_text.py
pysubparser/parsers/: srt.py  ssa.py  sub.py  txt.py
pysubparser/writers/: srt.py
tests/: cleaners.py  parser.py  test_cleaners.py  test_parser.py  test_writer.py  writer.py
tests/files/invalid_encoding/: test.srt
tests/files/invalid_timestamps/: test.ass  test.srt  test.ssa  test.sub  test.txt
tests/files/valid/: cleaners.srt  test.ass  test.ass.srt  test.srt  test.sub  test.txt
